2017-08-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (CopyPrint):  Fix fallback from D2D to GDI+ for
	printing.

2017-08-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  "Recursive make considered harmful".  Up
	until now we tried to reduce the number of rules by using recursive
	make for the three different targets "windows", "pipes" and "console".
	That broke parallel builds of the "all" target because of multiple
	attempts to build the same file due to insufficient dependency rules.
	Instead of fixing this, we now follow the same concept as the
	MSVC and OpenWatcom Makefiles and implement three set of rules and
	avoid recursive make altogether.  This also allows us to implement
	separate automatic dependency rules.  gnuplot scripts are now always
	executed using console mode gnuplot in order to see their output.

	* config/config.oww:  Update to version 5.3.  In particular enable
	boxed text and external functions and disable bitmap terminals by
	default.

2017-08-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (check_for_iteration):  If some depth of a nested
	iteration evaluates to an empty range, the evaluated limits of depths
	below it are irrelevant and possibly invalid.  Add a test to skip
	evaluation at lower depthes in such a case.
	Bug #1952

2017-08-10  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/msvc/Makefile:  Handle empty lines in cl wrapper script.
	jom dislikes changing the directory in a rule twice, so spawn
	a subshell when required.  Automatically generate timestamp.h for
	development builds.

2017-08-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/parse.c src/plot2d.c demo/iterate.dem:
	Revise recursive iteration algorithm to address problems with empty
	ranges in a nested iteration. Add support for dynamic reevaluation of
	the string in nested ranges using "for [s in <string-expression>]".
	Bug #1952

2017-08-09  Bastian Maerkisch  <bmaerkisch@web.de>
