@@ -1,5 +1,5 @@
 /*
- * $Id: wgdiplus.cpp,v 1.68 2017/07/29 08:48:07 markisch Exp $
+ * $Id: wgdiplus.cpp,v 1.69 2017/07/31 19:30:19 markisch Exp $
  */
 
 /*
@@ -542,8 +542,8 @@ do_draw_gdiplus(LPGW lpgw, Graphics &graphics, LPRECT rect, enum draw_target tar
 	if (target == DRAW_PRINTER) {
 		HDC hdc = graphics.GetHDC();
 		HDC hdc_screen = GetDC(NULL);
-		lw_scale = (double) GetDeviceCaps(hdc, VERTRES) /
-		           (double) GetDeviceCaps(hdc_screen, VERTRES);
+		lw_scale = (double) GetDeviceCaps(hdc, LOGPIXELSX) /
+		           (double) GetDeviceCaps(hdc_screen, LOGPIXELSY);
 		line_width *= lw_scale;
 		ReleaseDC(NULL, hdc_screen);
 		graphics.ReleaseHDC(hdc);
